# Ronand_Peralta_Electiva_2026_C1

./: README.md  archivo2.txt
NIZAO/: BoardNIZAO.kicad_sch  EnergyMeterA1.kicad_sch  IN-0-10V.kicad_sch  IN-4-20MA.kicad_sch  IN-DI.kicad_sch  NIZAO.20260312-101906.FCBak  NIZAO.FCStd  NIZAO.kicad_pcb  NIZAO.kicad_prl  NIZAO.kicad_pro  NIZAO.kicad_sch  NIZAO.step  NIZAO_3D.20260312-114628.FCBak  NIZAO_3D.20260401-133223.FCBak  NIZAO_3D.FCStd  OUT-0-10V.kicad_sch  OUT-4-20MA.kicad_sch  OUT-NPN.kicad_sch  OUT-PNP.kicad_sch  PawerSupply.kicad_sch  RLY.kicad_sch  TC.kicad_sch  _autosave-NIZAO.kicad_pcb  _autosave-NIZAO.kicad_prl  _autosave-NIZAO.kicad_pro  fp-info-cache  ~NIZAO.kicad_pcb.lck
tarea 1/: DOC - Plantilla SRS ERS Norma IEEE-830 STD Wallys.odt  ERS_NIZAO_PLC_IEEE830.docx  ERS_NIZAO_PLC_IEEE830_template_respetada.docx  ~$C - Plantilla SRS ERS Norma IEEE-830 STD Wallys.odt  ~$S_NIZAO_PLC_IEEE830.docx  ~$S_NIZAO_PLC_IEEE830_template_respetada.docx
tarea 2/Freecad/: Base Del Case Plástico.20260202-195122.FCBak  Base Del Case Plástico.20260302-162347.FCBak  Base Del Case Plástico.FCStd  Base Del Case Plástico.V1.01.20260416-171522.FCBak  Base Del Case Plástico.V1.01.FCStd  Tapa Del Case Plástico.20260203-090143.FCBak  (+5 more)
tarea 4/: NIZAO_Assembly.20260312-093727.FCBak  NIZAO_Assembly.FCStd  Pantalla LCD.20260312-113527.FCBak  Pantalla LCD.FCStd  RS-485.20260401-132242.FCBak  RS-485.FCStd
tarea 5/: Manual_Tecnico_PLC.docx  Planificación De La Pantalla .docx  ~$anificación De La Pantalla .docx  ~$nual_Tecnico_PLC.docx
tarea 5/plc_firmware/main/: CMakeLists.txt  main.c
(+132 files in other folders)
